# ropetrack

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  pyproject.toml
data/: README.md
docs/: 2026-07-01-10-day-benchmark-sprint.md  2026-07-03-clean-baseline-summary.md  2026-07-03-stage2-hard-splits-plan.md  2026-07-05-rope-diagnostic-reliability.md  2026-07-05-rope-diagnostic-reliability.zh.md  2026-07-06-rope-refinement-next-plan.md  2026-07-07-report-results-pack.md  2026-07-08-progress-report.md  2026-07-09-sim-batch-spec.md  2026-07-10-causal-past-residual-plan.md  2026-07-10-temporal-refiner-design.md  2026-07-10-temporal-refiner-implementation-plan.md  README.md  current-code-and-artifact-map.md  dataset-contract-matrix.md  interhand26m-oneview-protocol.md
experience/: 0000_repo_bootstrap.md  0001_hpc_env_and_submodules.md  0002_data_layout_and_wilor_smoke.md  0003_data_storage_and_extraction.md  0004_ho3d_v2_wilor_baseline.md  0005_ho3d_v3_wilor_jobs.md  0006_hamer_demo_data_download.md  0007_ho3d_gtbbox_batch_export.md  0008_ho3d_generic_detector_batch.md  0008_ho3d_hamer_gtbbox_jobs.md  0009_freihand_eval_gt_upload.md  0009_ho3d_hamer_gtbbox_jobs.md  0010_freihand_eval_gt_upload.md  0010_freihand_wilor_gtbbox_eval.md  0011_freihand_wilor_gtbbox_eval.md  0011_ho3d_generic_wilor_original_gtbbox_full.md  0012_freihand_four_gtbbox_baselines.md  0012_ho3d_generic_wilor_original_gtbbox_full.md  0013_freihand_four_gtbbox_baselines.md  0014_stage2_ho3d_v2_hard_mask_smoke.md  0015_stage2_ho3d_v2_hard_mask_512.md  0017_hand_predictor_migration.md  (+78 more)
(+237 files in other folders)
